	* sysdeps/powerpc/jmpbuf-unwind.h: Likewise.
	* sysdeps/sparc/sparc32/jmpbuf-unwind.h: Likewise.
	* sysdeps/sparc/sparc64/jmpbuf-unwind.h: Likewise.
	* sysdeps/x86_64/jmpbuf-unwind.h: Likewise.
	* setjmp/jmpbuf-offsets.h: File removed.
	* include/bits/setjmp.h: File removed.

2006-01-11  Ulrich Drepper  <drepper@redhat.com>

	* libio/wmemstream.c: New file.
	* libio/Makefile (routines): Add wmemstream.
	(tests): Add tst-memstream1, tst-memstream2, tst-wmemstream2, and
	tst-wmemstream2.
	* libio/tst-memstream1.c: New file.
	* libio/tst-memstream2.c: New file.
	* libio/tst-wmemstream1.c: New file.
	* libio/tst-wmemstream2.c: New file.

	* libio/memstream.c (_IO_mem_sync): Remove useless call to
	_IO_default_sync.

	* elf/check-textrel.c: Add missing argument.

	* Makerules: Define build-module-asneeded.
	* iconvdata/extra-module.mk: Use build-module-asneeded.
	needed.

2006-01-09  Richard Henderson  <rth@redhat.com>

	* iconvdata/extra-module.mk ($(objpfx)$(mod).so): Depend on ld.so.
	* sysdeps/alpha/__longjmp.S: Use PTR_DEMANGLE.
	* sysdeps/alpha/setjmp.S: Likewise.  Avoid __sigjmp_save for rtld;
	tailcall in libc.so.
	* sysdeps/unix/sysv/linux/alpha/sysdep.h (PTR_MANGLE): Define.
	(PTR_MANGLE2): Define.

2006-01-11  Ulrich Drepper  <drepper@redhat.com>

	* elf/check-localplt.c: New file.
	* elf/Makefile: Add rules to build and run check-localplt.
	* scripts/data/localplt-x86_64-linux-gnu.data: New file.
	* scripts/data/localplt-i386-linux-gnu.data: New file.

	* include/sys/stat.h: Add libc_hidden_proto for __fxstatat64.
	* sysdeps/unix/sysv/linux/fxstatat64.c: Add libc_hidden_def for
	__fxstatat64.
	* sysdeps/unix/sysv/linux/wordsize-64/fxstatat.c: Add
	__GI___fxstatat64 alias.

	* libio/memstream.c (_IO_mem_finish): Fix potential memory leak if
	realloc fails.

	* include/sched.h: Add libc_hidden_proto for __sched_yield.

	* libio/genops.c (_IO_unbuffer_write): Give concurrently running
	threads the chance to work correctly by trying to lock the stream.